--- a/components/buttons/par-sheet-link-button/ParSheetLinkButton.module.scss
+++ b/components/buttons/par-sheet-link-button/ParSheetLinkButton.module.scss
@@ -1,4 +1,15 @@
+@use '../../../styles/mixins' as *;
+
 .parSheetLinkButton {
-    padding: 2rem 6rem;
-    border: 1px solid hsl(var(--text-color))
+    display: inline-block;
+    padding: 1.5rem 4rem;
+    border-radius: 0.5rem;
+    box-shadow: 8px 8px 0px rgb(0, 0, 0);
+    transform: skew( 25deg);
+    
+
+    & span {
+        display: inline-block;
+        transform: skew( -25deg);
+    }
 }
