--- a/components/layout/background-component/BackgroundComponent.module.scss
+++ b/components/layout/background-component/BackgroundComponent.module.scss
@@ -2,7 +2,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 300%;
+    width: 100dvw;
     height: 100vh;
     overflow: hidden;
     z-index: -1;
