--- a/components/layout/background-component/BackgroundComponent.module.scss
+++ b/components/layout/background-component/BackgroundComponent.module.scss
@@ -9,7 +9,12 @@
     transition: var(--transition-main);
     
     & svg {
-    
+     position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%) scaleX(6); /* Scale the SVG horizontally by 3 */
+    width: 100%;
+    height: 100%;
         transition: var(--transition-main);
 
         & path {
