--- a/components/buttons/par-sheet-link-button/ParSheetLinkButton.module.scss
+++ b/components/buttons/par-sheet-link-button/ParSheetLinkButton.module.scss
@@ -3,14 +3,13 @@
 .parSheetLinkButton {
     display: inline-block;
     padding: 1.5rem 4rem;
+    border: 2px solid rgba(0, 0, 0, 1);
     border-radius: 0.5rem;
     box-shadow: 8px 8px 0px rgb(0, 0, 0);
     background: hsl(var(--secondary-background-color));
-    transform: skew( 25deg);
     
 
     & span {
         display: inline-block;
-        transform: skew( -25deg);
     }
 }
