chore: Update font imports, add MainHeading component, and adjust styles

--- a/styles/variables/_colors.scss
+++ b/styles/variables/_colors.scss
@@ -15,19 +15,19 @@
   --lgtbq-highlight-color: 37 100% 94%; // #FFF3E0
 
   // Tortilla Town
-  --tt-primary-color: 14 100% 57%; // #FF5722
-  --tt-secondary-color: 45 100% 51%; // #FFC107
-  --tt-highlight-color: 37 100% 94%; // #FFF3E0
+  --tt-primary-color: 130 76% 67%; // #6AEB7E
+  --tt-secondary-color: 65 66% 94%; // #F8FAE6
+  --tt-highlight-color:  0 78% 64%; // #EB5B5B 
 
   // Fayk Meats
-  --fm-primary-color: 123 38% 57%; // #66BB6A
-  --fm-secondary-color: 54 100% 62%; // #FFEB3B
-  --fm-highlight-color: 125 39% 94%; // #E8F5E9
+  --fm-primary-color: 151 66% 68%; // #76E3AF
+  --fm-secondary-color: 198 56% 75%; // #9DCEE3
+  --fm-highlight-color: 40 56% 75%; // #E3CB9D
 
   // 2Byte Muffins
-  --2bm-primary-color: 291 47% 60%; // #BA68C8
-  --2bm-secondary-color: 14 100% 63%; // #FF7043
-  --2bm-highlight-color: 292 44% 93%; // #F3E5F5
+  --2bm-primary-color: 349 69% 65%; // #E3687E
+  --2bm-secondary-color: 295 71% 62%; // #D85BE3
+  --2bm-highlight-color: 194 66% 67%; // #74C8E3
 }
 
 [data-theme='dark'] {
