--- a/components/buttons/par-sheet-link-button/ParSheetLinkButton.module.scss
+++ b/components/buttons/par-sheet-link-button/ParSheetLinkButton.module.scss
@@ -7,7 +7,8 @@
     border-radius: 0.5rem;
     box-shadow: 8px 8px 0px rgb(0, 0, 0);
     background: hsl(var(--secondary-background-color));
-    
+    font-size: var(--fs-600);
+    font-weight: bold;
 
     & span {
         display: inline-block;
