--- a/components/layout/link-container/LinkContainer.module.scss
+++ b/components/layout/link-container/LinkContainer.module.scss
@@ -1,11 +1,11 @@
 .linkContainer {
-    height: 100dvh;
+    height: 100%;
     width: calc(100dvw - 2rem);
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    gap: 4rem;
-
+    gap: 3rem;
+    overflow: hidden;
 }
