--- a/components/headings/main-heading/MainHeading.module.scss
+++ b/components/headings/main-heading/MainHeading.module.scss
@@ -1,5 +1,5 @@
 .mainHeading {
-    margin: 2rem auto;
+    margin-top: 2rem;
     width: 100%;
     text-align: center;
     font-size: var(--fs-900);
