--- a/styles/base/_reset.scss
+++ b/styles/base/_reset.scss
@@ -72,7 +72,7 @@ h6 {
 // }
 
 body {
-  height: 100%;
+  height: 100dvh;
   background-color: hsl(var(--background-color));
   font-family: var(--font-body);
   font-size: var(--fs-400);
