chore: Update background color in _colors.scss

--- a/styles/variables/_colors.scss
+++ b/styles/variables/_colors.scss
@@ -1,6 +1,6 @@
 :root {
   // Neutrals
-  --background-color: 180 100% 25%; // #008080
+  --background-color: 180 42% 55%; // #5CBDBD
   --secondary-background-color: 0 0% 75%; // #C0C0C0
   --text-color: 240 0% 10%; // #1A1A1A
 
