--- a/components/par-sheet/ParSheet.module.scss
+++ b/components/par-sheet/ParSheet.module.scss
@@ -1,4 +1,5 @@
 .parSheet {
+    position: relative;
     width: calc(100% - 4rem);
     margin: 2rem auto;
     padding: 2rem 1rem;
@@ -8,20 +9,23 @@
     align-items: center;
     justify-content: center;
     gap: 2rem;
-    box-shadow: 8px 8px 0 rgba(0, 0, 0, 1);
+    // box-shadow: 8px 8px 0 rgba(0, 0, 0, 1);
 
     &__cardList {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        gap: 2rem;
+        gap: 4rem;
     }
 }
 
 .productCard {
+
+    height: 16rem;
     border: 1px solid hsl(var(--text-color));
     padding: 0.5rem 1rem;
-    box-shadow: 2px 2px 0 rgba(0, 0, 0, 1);
+    box-shadow: 4px 4px 0 rgba(0, 0, 0, 1);
+    background-color: hsl(var(--secondary-background-color));
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(4, 1fr);
@@ -59,6 +63,42 @@
         & span {
             font-weight: bold;
             font-size: var(--fs-500);
+        }
+    }
+
+    &__shelfLife {
+        grid-column: 1 / 2;
+        grid-row: 4 / 5;
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        
+        & span {
+            font-weight: bold;
+            font-size: var(--fs-500);
+        }
+    }
+
+    &__expDate {
+        grid-column: 2 /3;
+        grid-row: 1 / 5;
+        padding-inline: 1rem;
+        border-left: 0.5px solid hsl(var(--text-color));
+        font-size: var(--fs-500);
+        font-weight: bold;
+        text-align: center;
+        display: grid;
+        place-items: center;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+
+        
+
+        & span {
+            grid-row: 2 / 3;
+            font-size: var(--fs-800);
+            font-weight: bolder;
+           color: hsl(var(--primary-color));
         }
     }
 }
