--- a/components/par-sheet/ParSheet.module.scss
+++ b/components/par-sheet/ParSheet.module.scss
@@ -1,6 +1,7 @@
 .parSheet {
     position: relative;
     width: calc(100% - 4rem);
+    max-width: calc(40rem - 4rem);
     margin: 2rem auto;
     padding: 2rem 1rem;
     background-color: hsl(var(--secondary-background-color));
