chore: Update LGTBQ and Tortilla Town colors in _colors.scss

--- a/styles/variables/_colors.scss
+++ b/styles/variables/_colors.scss
@@ -42,19 +42,19 @@
   --highlight-color: 339 100% 48%; // #F50057
 
   // Let's Get This Bread Queen
-  --lgtbq-primary-color: 36 100% 50%; // #FF7043
-  --lgtbq-secondary-color: 45 100% 51%; // #FFC107
-  --lgtbq-highlight-color: 9 28% 19%; // #3E2723
+  --lgtbq-primary-color: 40 60% 36%; // #946E25
+  --lgtbq-secondary-color: 54 71% 34%; // #948719
+  --lgtbq-highlight-color: 37 19% 55%; // #A39277
 
   // Tortilla Town
-  --tt-primary-color: 14 100% 70%; // #FF8A65
-  --tt-secondary-color: 45 100% 58%; // #FFCA28
-  --tt-highlight-color: 11 28% 24%; // #4E342E
+  --tt-primary-color: 129 54% 43%; // #32A845
+  --tt-secondary-color: 66 10% 56%; // #979982
+  --tt-highlight-color: 0 59% 36%; // #912626
 
   // Fayk Meats
-  --fm-primary-color: 123 43% 39%; // #388E3C
-  --fm-secondary-color: 49 98% 60%; // #FDD835
-  --fm-highlight-color: 124 55% 24%; // #1B5E20
+  --fm-primary-color: 151 56% 40%; // #2C9E68
+  --fm-secondary-color: 198 52% 46%; // #388CB0
+  --fm-highlight-color: 39 40% 54%; // #B8975A
 
   // 2Byte Muffins
   --2bm-primary-color: 287 65% 40%; // #8E24AA
