--- a/components/par-sheet/ParSheet.module.scss
+++ b/components/par-sheet/ParSheet.module.scss
@@ -28,6 +28,8 @@
     box-shadow: 4px 4px 0 rgba(0, 0, 0, 1);
     background-color: hsl(var(--secondary-background-color));
     display: grid;
+    place-content: center;
+    place-items: center;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(4, 1fr);
     gap: 0.5rem;
