--- a/styles/base/_reset.scss
+++ b/styles/base/_reset.scss
@@ -12,6 +12,7 @@ html {
   font-size: 100%;
   overflow-x: hidden;
   scroll-behavior: smooth scroll;
+  background-color: hsl(var(--background-color));
 }
 
 a,
@@ -72,6 +73,7 @@ h6 {
 // }
 
 body {
+  max-width: 56rem;
   height: 100dvh;
   background-color: hsl(var(--background-color));
   font-family: var(--font-body);
