chore: Update import paths for par-sheet data and components in zone pages

--- a/styles/variables/_colors.scss
+++ b/styles/variables/_colors.scss
@@ -1,8 +1,14 @@
 :root {
   // Neutrals
-  --background-color: 180 42% 55%; // #5CBDBD
+  --background-color: 241 0% 97%; // #F7F7F7
   --secondary-background-color: 0 0% 75%; // #C0C0C0
   --text-color: 240 0% 10%; // #1A1A1A
+
+  // Primaries
+  --primary-red-color: 349 49% 47%; // #B13D52
+  --primary-yellow-color: 61 88% 59%; // #EFF33B
+  --primary-green-color: 133 68% 51%; // #2FD754
+  --primary-blue-color: 241 76% 53%; // #2D2AE2
 
   // Highlights
   --primary-color: 240 75% 25%; // #101070
