--- a/styles/utils/_themes.scss
+++ b/styles/utils/_themes.scss
@@ -2,9 +2,9 @@
   background: hsl(var(--secondary-background-color));
   background-image: linear-gradient(
     45deg,
-    hsl(var(--primary-color) / 0.5 ) 0%,
-    hsl(var(--secondary-color) / 0.5 ) 50%,
-    hsl(var(--highlight-color) / 0.5 ) 100%
+    hsl(var(--primary-color) / 0.5) 0%,
+    hsl(var(--secondary-color) / 0.5) 50%,
+    hsl(var(--highlight-color) / 0.5) 100%
   );
 }
 
@@ -12,38 +12,78 @@
   background: hsl(var(--secondary-background-color));
   background-image: linear-gradient(
     45deg,
-    hsl(var(--lgtbq-primary-color) / 0.5 ) 0%,
-    hsl(var(--lgtbq-secondary-color) / 0.5 ) 50%,
-    hsl(var(--lgtbq-highlight-color) / 0.5 ) 100%
+    hsl(var(--lgtbq-primary-color) / 0.5) 0%,
+    hsl(var(--lgtbq-secondary-color) / 0.5) 50%,
+    hsl(var(--lgtbq-highlight-color) / 0.5) 100%
   );
 }
 
 .tt-theme {
-    background: hsl(var(--secondary-background-color));
-    background-image: linear-gradient(
-        45deg,
-        hsl(var(--tt-primary-color) / 0.5) 0%,
-        hsl(var(--tt-secondary-color) / 0.5) 50%,
-        hsl(var(--tt-highlight-color) / 0.5) 100%
-    );
+  background: hsl(var(--secondary-background-color));
+  background-image: linear-gradient(
+    45deg,
+    hsl(var(--tt-primary-color) / 0.5) 0%,
+    hsl(var(--tt-secondary-color) / 0.5) 50%,
+    hsl(var(--tt-highlight-color) / 0.5) 100%
+  );
 }
 
 .fm-theme {
-    background: hsl(var(--secondary-background-color));
-    background-image: linear-gradient(
-        45deg,
-        hsl(var(--fm-primary-color) / 0.5) 0%,
-        hsl(var(--fm-secondary-color) / 0.5) 50%,
-        hsl(var(--fm-highlight-color) / 0.5) 100%
-    );
+  background: hsl(var(--secondary-background-color));
+  background-image: linear-gradient(
+    45deg,
+    hsl(var(--fm-primary-color) / 0.5) 0%,
+    hsl(var(--fm-secondary-color) / 0.5) 50%,
+    hsl(var(--fm-highlight-color) / 0.5) 100%
+  );
 }
 
 .tbm-theme {
-    background: hsl(var(--secondary-background-color));
-    background-image: linear-gradient(
-        90deg,
-        hsl(var(--2bm-primary-color) / 0.5) 0%,
-        hsl(var(--2bm-secondary-color) / 0.5) 50%,
-        hsl(var(--2bm-highlight-color) / 0.5) 100%
-    );
+  background: hsl(var(--secondary-background-color));
+  background-image: linear-gradient(
+    90deg,
+    hsl(var(--2bm-primary-color) / 0.5) 0%,
+    hsl(var(--2bm-secondary-color) / 0.5) 50%,
+    hsl(var(--2bm-highlight-color) / 0.5) 100%
+  );
+}
+
+.red-theme {
+  border-color: hsl(var(--primary-red-color));
+  background-image: linear-gradient(
+    45deg,
+    hsl(var(--primary-red-color) / 0.5) 0%,
+    hsl(var(--primary-red-color) / 0.3) 50%,
+    hsl(var(--primary-red-color) / 0.1) 100%
+  );
+}
+
+.green-theme {
+  border-color: hsl(var(--primary-green-color));
+  background-image: linear-gradient(
+    45deg,
+    hsl(var(--primary-green-color) / 0.5) 0%,
+    hsl(var(--primary-green-color) / 0.3) 50%,
+    hsl(var(--primary-green-color) / 0.1) 100%
+  );
+}
+
+.blue-theme {
+  border-color: hsl(var(--primary-blue-color));
+  background-image: linear-gradient(
+    45deg,
+    hsl(var(--primary-blue-color) / 0.5) 0%,
+    hsl(var(--primary-blue-color) / 0.3) 50%,
+    hsl(var(--primary-blue-color) / 0.1) 100%
+  );
+}
+
+.yellow-theme {
+  border-color: hsl(var(--primary-yellow-color));
+  background-image: linear-gradient(
+    45deg,
+    hsl(var(--primary-yellow-color) / 0.5) 0%,
+    hsl(var(--primary-yellow-color) / 0.3) 50%,
+    hsl(var(--primary-yellow-color) / 0.1) 100%
+  );
 }
