--- a/components/layout/nav/Navbar.module.scss
+++ b/components/layout/nav/Navbar.module.scss
@@ -1,25 +1,14 @@
+
+
 .navbar {
-  width: calc(100% - 4rem);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
-
-  & ul {
+    width: calc(100% - 4rem);
+    position: relative;
+    margin: 0 auto;
+    // height: 100%;
+    padding: 2rem 0;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
 
-    & li {
-      border: 1px solid hsl(var(--text-color));
-      border-top: none;
-      display: grid;
-      place-content: center;
-      place-items: center;
-      padding: 0.5rem;
-      text-transform: capitalize;
-      font-weight: bold;
-      text-align: center;
-      background-color: hsl(var(--secondary-background-color));
-    }
-  }
+   
 }
