--- a/components/layout/nav/logo/Logo.module.scss
+++ b/components/layout/nav/logo/Logo.module.scss
@@ -1,7 +1,29 @@
 
 .logo {
     margin-left: 2rem;
-    line-height: 1.5;
+    line-height: 1;
+    
+    & span {
+        font-family: var(--font-heading);
+        font-size: var(--fs-800);
+        font-weight: 900;
+        letter-spacing: 0.25rem;
+        text-shadow: 2px 2px 0 hsl(var(--text-color));
+
+        &:nth-of-type(1) {
+            color: hsl(var(--primary-red-color));
+        }
+        &:nth-of-type(2) {
+            color: hsl(var(--primary-green-color));
+        }
+        &:nth-of-type(3) {
+            color: hsl(var(--primary-blue-color));
+        }
+        &:nth-of-type(4) {
+            color: hsl(var(--primary-yellow-color));
+        }
+        
+    }
     z-index: 2000;
     transition: var(--transition-main);
   
