--- a/components/zones/task-list/TaskList.module.scss
+++ b/components/zones/task-list/TaskList.module.scss
@@ -1,6 +1,9 @@
 .taskList {
     width: calc(100% - 4rem);
     margin: 2rem auto;
+    padding: 2rem 1rem;
+    border: 1px solid hsl(var(--text-color));
+    box-shadow: 8px 8px 0 rgba(0, 0, 0, 1);
     display: grid;
     gap: 2rem;
 }
