--- a/components/buttons/navlink/InternalNavLink.module.scss
+++ b/components/buttons/navlink/InternalNavLink.module.scss
@@ -1,6 +1,9 @@
 @use '../../../styles/mixins' as *;
 
 .internalNavLink {
+    padding: 1rem 2.5rem;
+    border: 1px solid hsl(var(--text-color));
+    box-shadow: 4px 4px 0 rgba(0, 0, 0, 1);
     font-size: var(--fs-500);
     letter-spacing: 1px;
     font-weight: 700;
