--- a/components/layout/nav/navMenu/NavMenu.module.scss
+++ b/components/layout/nav/navMenu/NavMenu.module.scss
@@ -15,6 +15,14 @@
   gap: 4rem;
   transition: var(--transition-main);
   z-index: 1000;
+
+  & ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 4rem;
+  }
   
 
 }
